- 
    
Bug
 - 
    Resolution: Done
 - 
    
P1: Critical
 - 
    5.8.0 Alpha
 - 
    None
 
- 
        31b3986e2dfc962e271a74fa43333c4621e3bd50
 
After ec7fee968f5f1a842b7d2fe670de1d517ecca308, using QRawFont to load font data no longer works in combination with DirectWrite (either for color fonts or non-default hinting preferences.)
The scale will cause the glyphs to be empty.
- resulted from
 - 
                    
QTBUG-55595 [REG 5.6->5.7] Windows: Loading font file SEGUIEMJ.TTF using QRawFont crashes the application
-         
 - Closed
 
 -         
 
| For Gerrit Dashboard: QTBUG-56091 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 171564,2 | Fix DirectWrite engine when loading from data through QRawFont | 5.8 | qt/qtbase | Status: MERGED | +2 | 0 |